--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@marianmeres/base-model",
+  "name": "@marianmeres/modelize",
   "version": "0.1.1",
-  "description": "Base model class with schema, validation and change watch.",
+  "description": "Single utility function `modelize` which proxies your model instance to monitor changes, validate, and more...",
   "type": "module",
   "exports": {
     "import": "./dist/index.ems.js",
