--- a/deno.json
+++ b/deno.json
@@ -4,26 +4,27 @@
 	"license": "MIT",
 	"exports": "./src/mod.ts",
 	"tasks": {
-		"test": "deno test --watch",
+		"test": "deno test",
+		"test:watch": "deno test --watch",
 		"npm:build": "deno run -A scripts/build-npm.ts",
-		"npm:publish": "deno run -A scripts/build-npm.ts && cd ./.npm-dist && npm publish --access=public"
+		"npm:publish": "deno run -A scripts/build-npm.ts && cd ./.npm-dist && npm publish --access=public",
+		"release": "deno run -A jsr:@marianmeres/deno-release",
+		"publish": "deno publish && deno task npm:publish",
+		"rp": "deno task release -y && deno task publish",
+		"rpm": "deno task release minor -y && deno task publish"
 	},
 	"imports": {
-		"@marianmeres/pubsub": "jsr:@marianmeres/pubsub@^2.4.1",
+		"@marianmeres/npmbuild": "jsr:@marianmeres/npmbuild@^1.9.1",
+		"@marianmeres/pubsub": "jsr:@marianmeres/pubsub@^2.4.5",
 		"@std/assert": "jsr:@std/assert@^1.0.16",
 		"ajv": "npm:ajv@^8.17.1",
-		"@std/fs": "jsr:@std/fs@^1.0.20",
-		"@std/path": "jsr:@std/path@^1.1.3"
+		"@std/fs": "jsr:@std/fs@^1.0.21",
+		"@std/path": "jsr:@std/path@^1.1.4"
 	},
 
 	"fmt": {
 		"useTabs": true,
 		"lineWidth": 90,
 		"indentWidth": 4
-	},
-	"lint": {
-		"rules": {
-			"exclude": ["no-explicit-any"]
-		}
 	}
 }
